--- a/imports.html
+++ b/imports.html
@@ -342,6 +342,19 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">CANNED FRUITS</th>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>Peach, Pear, Apricots</td>
+                                <td></td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
