--- a/imports.html
+++ b/imports.html
@@ -355,6 +355,19 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">MANDARIN ORANGES</th>
+                                <td></td>
+                                <td>Spain</td>
+                            </tr>
+                            <tr>
+                                <td>Whole and brokens, in foodservice cans</td>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
