--- a/imports.html
+++ b/imports.html
@@ -368,6 +368,24 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">COCKTAIL CHERRIES (MARASCHINO TYPE)</th>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Red (with/out Stem), Green (with Stem)</td>
+                                <td></td>
+                                <td>USA</td>
+                            </tr>
+                            <tr>
+                                <td>In plastic foodservice jars</td>
+                                <td></td>
+                                <td>Italy</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
