Added sour cherries

--- a/imports.html
+++ b/imports.html
@@ -386,6 +386,19 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">SOUR CHERRIES</th>
+                                <td></td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td>Pitted, in foodservice cans/jars</td>
+                                <td></td>
+                                <td>Hungary</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
