--- a/imports.html
+++ b/imports.html
@@ -399,6 +399,38 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">FRUIT JUICE CONCENTRATES</th>
+                            </tr>
+                            <tr>
+                                <td>Apple, Grape, Grapefruit, Orange, Pineapple</td>
+                                <td></td>
+                                <td>USA</td>
+                            </tr>
+                            <tr>
+                                <td>Apple, Peach, Pear, Apricot, Plum & Prune, Strawberry</td>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>Raspberry and Blueberry, Carrot, Butternut Squash</td>
+                                <td></td>
+                                <td>Chile</td>
+                            </tr>
+                            <tr>
+                                <td>Single and Double Strength Purées</td>
+                                <td></td>
+                                <td>Argentina</td>
+                            </tr>
+                            <tr>
+                                <td>Apple Apricot, Grape, Grapefruit, Lemon</td>
+                            </tr>
+                            <tr>
+                                <td>Mandarin, Orange, Peach, Pear</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
