--- a/imports.html
+++ b/imports.html
@@ -431,6 +431,31 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">BERRIES & CHERRIES</th>
+                            </tr>
+                            <tr>
+                                <td>Cherries (Dark Sweet, in foodservice cans)</td>
+                                <td></td>
+                                <td>USA</td>
+                            </tr>
+                            <tr>
+                                <td>Berries (Blueberry, Raspberry, Strawberry, Boysenberry)</td>
+                                <td>Spears and Tips & Cuts</td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>IQF or in cans</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Frozen Berries in Sauce</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Frozen Berry Fillings</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
