Fixed section fonts

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <span class="link">
-                            <a class="nav-link" href="./index.html">About Us</a>
+                            <a class="nav-link font-times" href="./index.html">About Us</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span class="link">
-                            <a class="nav-link" href="./imports.html">Our Imports</a>
+                            <a class="nav-link font-times" href="./imports.html">Our Imports</a>
                         </span>
                     </li>
                 </ul>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="card-footer bg-green-dark text-center txt-yellow">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 font-times">
                             <h5 class="card-title font-times">Address</h5>
                             <span>Suite 6, 141 Victoria Road</span>
                             <br />
@@ -67,7 +67,7 @@
                             <br />
                             <span>Sydney, Australia</span>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 font-times">
                             <h5 class="card-title font-times">Contact</h5>
                             <span class="link">Tel: <a href="tel:+61409711888">+61 409 711 888</a></span>
                             <br />
