--- a/imports.html
+++ b/imports.html
@@ -15,12 +15,12 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <span class="link">
-                            <a class="nav-link" href="./index.html">About Us</a>
+                            <a class="nav-link font-times" href="./index.html">About Us</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span class="link">
-                            <a class="nav-link" href="./imports.html">Our Imports</a>
+                            <a class="nav-link font-times" href="./imports.html">Our Imports</a>
                         </span>
                     </li>
                 </ul>
