--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
                         <p class="font-times italic">Our main sources of direct imports have been Southeast Asia (India, China, Sri Lanka, Philippines), Europe (Spain, Holland, Hungary), North Africa (Morocco), and South America (Chile, Peru). For smaller than FCL Quantities, we also broker domestically stocked products from other sources.</p>
 
-                        <p class="font-times italic">Export shipments are made on the basis of firm orders placed by our clients in container loads - we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank of Australia in Sydney.</p>
+                        <p class="font-times italic">Export shipments are made on the basis of firm orders placed by our clients in container loads - we do not keep stocks of these products in overseas markets.</p>
 
-                        <p class="font-times italic">The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
+                        <p class="font-times italic">The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years. Our trade bankers are Commonwealth Bank of Australia in Sydney.</p>
 
                         <p class="font-times italic">Please feel free to let us know if there are any particular product items you wish to enquire.</p>
                     </p>
@@ -70,8 +70,6 @@
                         <div class="col-md-6 font-times">
                             <h5 class="card-title font-times">Contact</h5>
                             <span class="link">Tel: <a href="tel:+61409711888">+61 409 711 888</a></span>
-                            <br />
-                            <span class="link">Fax: <a href="tel:+61297198580">+61 2 9719 8580</a></span>
                             <br />
                             <span class="link">Email: <a href="mailto:rmoallem@fcproducts.com.au">rmoallem@fcproducts.com.au</a></span>
                         </div>
