Updated imports page

--- a/imports.html
+++ b/imports.html
@@ -53,17 +53,17 @@
                                 <td>Sri Lanka</td>
                             </tr>
                             <tr>
-                                <td><u>Whole</u>, <u>Sliced</u>, <u>Stackers</u>, <u>Quarters</u></td>
+                                <td>Cornichons, Relish, Diced</td>
                                 <td></td>
                                 <td>Turkey</td>
                             </tr>
                             <tr>
-                                <td>Cornichons, Relish, Diced</td>
+                                <td><u>Mixed Pickles</u> (Giardiniera)</td>
                                 <td></td>
                                 <td>Greece</td>
                             </tr>
                             <tr>
-                                <td><u>Mixed Pickles</u> (Giardiniera)</td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -77,7 +77,7 @@
                                 <td>India</td>
                             </tr>
                             <tr>
-                                <td>Sliced White Onions</td>
+                                <td>Large White Onions</td>
                                 <td></td>
                                 <td>Holland</td>
                             </tr>
@@ -106,17 +106,17 @@
                                 <td>Italy</td>
                             </tr>
                             <tr>
-                                <td>Spanish</td>
+                                <td>Kalamata-style</td>
                                 <td>Sliced</td>
                                 <td>Morocco</td>
                             </tr>
                             <tr>
-                                <td>Kalamata-style</td>
+                                <td><u>Olive Paste/ Tapenades</u></td>
                                 <td>Stuffed</td>
                                 <td>Turkey</td>
                             </tr>
                             <tr>
-                                <td><u>Olive Paste/ Tapenades</u></td>
+                                <td></td>
                                 <td>Black/Green/Flavoured (Jars)</td>
                             </tr>
                             <tr>
@@ -312,7 +312,7 @@
                                 <th scope="row">PINEAPPLE</th>
                             </tr>
                             <tr>
-                                <td>Tidbits & Rings, in cans or bags</td>
+                                <td>Tidbits & Rings, in foodservice cans or bags</td>
                                 <td></td>
                                 <td>Thailand</td>
                             </tr>
@@ -322,7 +322,7 @@
                                 <td>China</td>
                             </tr>
                             <tr>
-                                <td>Crushed, in cans</td>
+                                <td>Crushed, in foodservice cans</td>
                                 <td></td>
                                 <td>Philippines</td>
                             </tr>
@@ -364,97 +364,6 @@
                                 <td>Whole and brokens, in foodservice cans</td>
                                 <td></td>
                                 <td>China</td>
-                            </tr>
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">COCKTAIL CHERRIES (MARASCHINO TYPE)</th>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Red (with/out Stem), Green (with Stem)</td>
-                                <td></td>
-                                <td>USA</td>
-                            </tr>
-                            <tr>
-                                <td>In plastic foodservice jars</td>
-                                <td></td>
-                                <td>Italy</td>
-                            </tr>
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">SOUR CHERRIES</th>
-                                <td></td>
-                                <td>Turkey</td>
-                            </tr>
-                            <tr>
-                                <td>Pitted, in foodservice cans/jars</td>
-                                <td></td>
-                                <td>Hungary</td>
-                            </tr>
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">FRUIT JUICE CONCENTRATES</th>
-                            </tr>
-                            <tr>
-                                <td>Apple, Grape, Grapefruit, Orange, Pineapple</td>
-                                <td></td>
-                                <td>USA</td>
-                            </tr>
-                            <tr>
-                                <td>Apple, Peach, Pear, Apricot, Plum & Prune, Strawberry</td>
-                                <td></td>
-                                <td>China</td>
-                            </tr>
-                            <tr>
-                                <td>Raspberry and Blueberry, Carrot, Butternut Squash</td>
-                                <td></td>
-                                <td>Chile</td>
-                            </tr>
-                            <tr>
-                                <td>Single and Double Strength Purées</td>
-                                <td></td>
-                                <td>Argentina</td>
-                            </tr>
-                            <tr>
-                                <td>Apple Apricot, Grape, Grapefruit, Lemon</td>
-                            </tr>
-                            <tr>
-                                <td>Mandarin, Orange, Peach, Pear</td>
-                            </tr>
-                            <tr>
-                                <td>&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">BERRIES & CHERRIES</th>
-                            </tr>
-                            <tr>
-                                <td>Cherries (Dark Sweet, in foodservice cans)</td>
-                                <td></td>
-                                <td>USA</td>
-                            </tr>
-                            <tr>
-                                <td>Berries (Blueberry, Raspberry, Strawberry, Boysenberry)</td>
-                                <td>Spears and Tips & Cuts</td>
-                                <td>China</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td>IQF or in cans</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td>Frozen Berries in Sauce</td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td>Frozen Berry Fillings</td>
                             </tr>
                         </tbody>
                     </table>
