Removed unused table row from imports

--- a/imports.html
+++ b/imports.html
@@ -60,10 +60,7 @@
                             <tr>
                                 <td><u>Mixed Pickles</u> (Giardiniera)</td>
                                 <td></td>
-                                <td>Greece</td>
-                            </tr>
-                            <tr>
-                                <td></td>
+                                <td>Vietnam</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
